2009-11-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/ResolveResult.cs: Fixed 'Bug 553092
	  - Go to definition doesn't work on extension methods'.

2009-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/Solution.cs:
	* MonoDevelop.Projects/WorkspaceItem.cs:
	* MonoDevelop.Projects/SolutionFolder.cs:
	* MonoDevelop.Projects/SolutionEntityItem.cs: Added
	  ReloadRequired event, which is fired when the NeedsReload
	  property changes.

2009-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/DotNetProject.cs:
	* MonoDevelop.Projects.Formats.MD1/MD1DotNetProjectHandler.cs:
	  Use a runtime-dependent method for getting the debug info
	  file of an assembly.

2009-10-30  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.Projects.addin.xml: Bump MD version.

2009-10-30  Carlo Kok  <ck@remobjects.com>

	* MonoDevelop.Projects.Dom/DomMethod.cs:
	* MonoDevelop.Projects.Dom/DomProperty.cs: use Parameters not parameters.

2009-10-30  Carlo Kok  <ck@remobjects.com>

	* MonoDevelop.Projects.Dom/DomMethod.cs:
	* MonoDevelop.Projects.Dom/DomProperty.cs: CompareTo and Equals
	  on properties and methods take in account the parameters.

2009-10-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.CodeGeneration/BaseRefactorer.cs: Fixed
	  'Bug 551327 - Methods incorrectly formatted when adding a
	  handler'.

2009-10-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Output/AmbienceService.cs: Fixed
	  'Bug 550928 - Parameters tooltip shows too much
	  documentation'.

2009-10-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/ResolveResult.cs: Added type nucc
	  check (extension methods can be called directly without
	  extension).

2009-10-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/ExtensionMethod.cs: added argument
	  checks.

2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* md1format.xml: